--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,54 @@
 @charset "UTF-8";
 
 /*
-    pALETA DE CORES
+    PALETA DE CORES
     Verde: #49a09d
     Lilás: #5f2c82
+
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    width: 100vw;
+    height: 100vh;   
+}
+
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;  
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px; 
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+}
+
+
+section#login > div#imagem {  
+    display: b;
+    background: #5f2c82 url(../imagens/thether\ black.jpg) no-repeat;
+    background-size: cover;
+    background-position: left center;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    padding: 10px;
+}
