--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,11 +38,14 @@ section#login {
     border-radius: 20px; 
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 
 section#login > div#imagem {  
-    display: b;
+    display: block;
     background: #5f2c82 url(../imagens/thether\ black.jpg) no-repeat;
     background-size: cover;
     background-position: left center;
@@ -50,5 +53,6 @@ section#login > div#imagem {
 }
 
 section#login > div#formulario {
+    display: block;
     padding: 10px;
 }
