--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -32,21 +32,29 @@ Grandes Telas: acima de 1200px
 
 @media screen and (min-width: 992px) {
     body {
-        background-image: linear-gradient(to top, #314443, #5f2c82);
+        background-color: linear-gradient(to top, #314443, #5f2c82);
     }
     
     section#login {
         width: 990px;
     }
 
-    section#login > section#imagem {
-        float: left;
+    section#login > div#imagem {
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 1.8em;
+    }
+
+    div#fomulario > p {
+        font-size: 1.2em;
     }
 } 
