--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,7 +11,7 @@ Grandes Telas: acima de 1200px
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body {
-        background-image: linear-gradient(to top, #314443, #5f2c82);
+        background-image: linear-gradient(to top, #000000, #1f1e1f);
     }
     
     section#login {
@@ -32,7 +32,7 @@ Grandes Telas: acima de 1200px
 
 @media screen and (min-width: 992px) {
     body {
-        background-color: linear-gradient(to top, #314443, #5f2c82);
+        background-color: linear-gradient(to top, #000000, #1f1e1f);
     }
     
     section#login {
