--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -13,9 +13,10 @@ Grandes Telas: acima de 1200px
     body {
         background-image: linear-gradient(to top, #000000, #1f1e1f);
     }
-    
+      
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -37,6 +38,7 @@ Grandes Telas: acima de 1200px
     
     section#login {
         width: 990px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -51,10 +53,11 @@ Grandes Telas: acima de 1200px
     }
 
     div#formulario > h1 {
-        font-size: 1.8em;
+        font-size: 2em;
     }
 
-    div#fomulario > p {
-        font-size: 1.2em;
+    div#formulario > p {
+        font-size: 1em;
+        margin: 20px 0px;
     }
 } 
