--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,8 +30,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
     background-color: white;
     width: 260px;
     height: 495px;
@@ -39,6 +37,7 @@ section#login {
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -64,20 +63,44 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: .8em;
+    margin-bottom: 10px;
 }
 
 form > div.campo {
     background-color: rgb(201, 198, 198);
+    border: 2px solid rgb(201, 198, 198);
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
 
+}
+
+div.campo > span {
+    color: rgb(92, 92, 92);
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: rgb(201, 201, 201);
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border-radius: 8px ;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
